fixed overflow issue

--- a/css/core-styles.css
+++ b/css/core-styles.css
@@ -34,6 +34,12 @@ body, html {
     overflow-x: hidden !important;
 }
 
+body {
+    width:100%;
+    overflow-x:hidden;
+    overflow-y:hidden;
+}
+
 p {
 	line-height: 1.6em;
 }
